force-app/main/default/objects/Contact/fields/Active_Care_Coordination_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Active_Care_Coordination_Nurse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Care Coordination Nurse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>