force-app/main/default/objects/Contact/fields/Activity_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Activity_Indicator__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 0, &apos;0154W00000CMt9P&apos;, &apos;0154W00000CMt9Q&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 3, &apos;0154W00000CMt9P&apos;, &apos;0154W00000CMt9Q&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 6, &apos;0154W00000CMt9P&apos;, &apos;0154W00000CMt9Q&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 9, &apos;0154W00000CMt9P&apos;, &apos;0154W00000CMt9Q&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 12, &apos;0154W00000CMt9P&apos;, &apos;0154W00000CMt9Q&apos;),&apos;&apos;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Indicator</label>
    <type>Text</type>
</CustomField>