force-app/main/default/objects/Contact/fields/Activity_Indicator_partner__c.field-meta.xml
<CustomField>
    <fullName>Activity_Indicator_partner__c</fullName>
    <formula>IF( Total_of_Activities__c &lt; 5, IMAGE(&quot;https://na13.salesforce.com/servlet/servlet.FileDownload?file=0154W00000CMt9h&amp;oid=00D4W000005k17D&quot;,&quot;1 Star&quot;,20,100), 
IF(Total_of_Activities__c &lt; 10, IMAGE(&quot;https://na13.salesforce.com/servlet/servlet.FileDownload?file=0154W00000CMt9i&amp;oid=00D4W000005k17D&quot;, &quot;3 Stars&quot;,20,100), 
IMAGE(&quot;https://na13.salesforce.com/servlet/servlet.FileDownload?file= 0154W00000CMt9j&amp;oid=00D4W000005k17D&quot;, &quot;5 Stars&quot;,20,100)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Indicator</label>
    <type>Text</type>
</CustomField>