force-app/main/default/objects/Contact/fields/Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Advocacy__c</fullName>
    <formula>CASE ( 

VALUE(CASE( Relationship__c , &quot;Excellent&quot;, &quot;2&quot;, &quot;Good&quot;, &quot;1&quot;, &quot;Neutral&quot;, &quot;0&quot;, &quot;Poor&quot;, &quot;-1&quot;, &quot;Hostile&quot;, &quot;-2&quot;, &quot;0&quot;) ) 

* 

VALUE (CASE(  Influence__c , &quot;Strong&quot;, &quot;3&quot;, &quot;Moderate&quot;, &quot;2&quot;, &quot;Weak&quot;, &quot;1&quot;, &quot;0&quot;) ) 

,

6, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt97&quot;,&quot;3 Up Arrows&quot;) , 
4, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt98&quot;,&quot;2 Up Arrows&quot;) ,
3, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt98&quot;,&quot;2 Up Arrows&quot;) ,
2, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt99&quot;,&quot;1 Up Arrow&quot;) ,
1, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt99&quot;,&quot;1 Up Arrow&quot;) ,
0, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt9A&quot;,&quot;Neutral Arrow&quot;) ,
-1, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt9B&quot;,&quot;1 Down Arrow&quot;) ,
-2, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt9B&quot;,&quot;1 Down Arrow&quot;) ,
-3, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt9C&quot;,&quot;2 Down Arrows&quot;) ,
-4, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt9C&quot;,&quot;2 Down Arrows&quot;) ,
-6, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt9D&quot;,&quot;3 Down Arrows&quot;) ,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt9A&quot;,&quot;Neutral Arrow&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advocacy</label>
    <type>Text</type>
</CustomField>