force-app/main/default/objects/Contact/fields/Affiliations_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Affiliations_Memberships__c</fullName>
    <label>Affiliations &amp; Memberships</label>
    <length>100</length>
    <type>Text</type>
</CustomField>