force-app/main/default/objects/Contact/fields/Attritted__c.field-meta.xml
<CustomField>
    <fullName>Attritted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attritted</label>
    <type>Checkbox</type>
</CustomField>