force-app/main/default/objects/Contact/fields/AVG_M4Utilization_Risk_Adjusted_Utl__c.field-meta.xml
<CustomField>
    <fullName>AVG_M4Utilization_Risk_Adjusted_Utl__c</fullName>
    <formula>IF(M1_Count__c&gt;0,(M4_Sum__c / M1_Count__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG M4Utilization/Risk Adjusted Utl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>