force-app/main/default/objects/Contact/fields/AVG_M6Measures_using_CDS__c.field-meta.xml
<CustomField>
    <fullName>AVG_M6Measures_using_CDS__c</fullName>
    <formula>IF(M1_Count__c&gt;0,(M1_Sum__c / M1_Count__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG M6 Measures using CDS</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>