force-app/main/default/objects/Contact/fields/AVG_MHealth_Plan_Desc_Info__c.field-meta.xml
<CustomField>
    <fullName>AVG_MHealth_Plan_Desc_Info__c</fullName>
    <formula>IF(M1_Count__c&gt;0,(M5_Sum__c / M1_Count__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG M5 Health Plan Desc Info.</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>