force-app/main/default/objects/Contact/fields/Awards_Honors__c.field-meta.xml
<CustomField>
    <fullName>Awards_Honors__c</fullName>
    <label>Awards &amp; Honors</label>
    <type>TextArea</type>
</CustomField>