force-app/main/default/objects/Contact/fields/Benefits_Usage__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Usage__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt8i&quot;,&quot;Benefits Usage&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benefits Usage</label>
    <type>Text</type>
</CustomField>