force-app/main/default/objects/Contact/fields/Best_Time_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Call__c</fullName>
    <label>Best Time to Call</label>
    <type>TextArea</type>
</CustomField>