force-app/main/default/objects/Contact/fields/Book_of_Business_YTD__c.field-meta.xml
<CustomField>
    <fullName>Book_of_Business_YTD__c</fullName>
    <label>Book of Business YTD</label>
    <summarizedField>Policy__c.Premium__c</summarizedField>
    <summaryForeignKey>Policy__c.Producer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>