force-app/main/default/objects/Contact/fields/CAQH_Id__c.field-meta.xml
<CustomField>
    <fullName>CAQH_Id__c</fullName>
    <label>CAQH Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>