force-app/main/default/objects/Contact/fields/CaseSubject__c.field-meta.xml
<CustomField>
    <fullName>CaseSubject__c</fullName>
    <label>CaseSubject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>