force-app/main/default/objects/Contact/fields/Community_Type__c.field-meta.xml
<CustomField>
    <fullName>Community_Type__c</fullName>
    <label>Community Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Suburban</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>