force-app/main/default/objects/Contact/fields/Created_Date_Mktg__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Mktg__c</fullName>
    <label>Created Date (Mktg)</label>
    <type>Date</type>
</CustomField>