force-app/main/default/objects/Contact/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <label>Credential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M.D.</fullName>
            </value>
            <value>
                <fullName>D.O.</fullName>
            </value>
            <value>
                <fullName>M.D.P.C</fullName>
            </value>
            <value>
                <fullName>M.D., MSPh</fullName>
            </value>
            <value>
                <fullName>M.D., Ph.D.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>