force-app/main/default/objects/Contact/fields/Cust360_Contact_Picture_URL1__c.field-meta.xml
<CustomField>
    <fullName>Cust360_Contact_Picture_URL1__c</fullName>
    <label>Cust360 Contact Picture URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>