force-app/main/default/objects/Contact/fields/Cust360_Id__c.field-meta.xml
<CustomField>
    <fullName>Cust360_Id__c</fullName>
    <label>Cust360 Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>