force-app/main/default/objects/Contact/fields/Cust360_Metric2__c.field-meta.xml
<CustomField>
    <fullName>Cust360_Metric2__c</fullName>
    <label>Cust360 Metric 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>