force-app/main/default/objects/Contact/fields/Days_since_last_Referral__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_Referral__c</fullName>
    <formula>TODAY()- Last_Referral_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last Referral</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>