force-app/main/default/objects/Contact/fields/Dedicated_Account__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Account</label>
    <type>Checkbox</type>
</CustomField>