force-app/main/default/objects/Contact/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <description>Payer</description>
    <label>Degree</label>
    <length>50</length>
    <type>Text</type>
</CustomField>