force-app/main/default/objects/Contact/fields/Dental_CoPay__c.field-meta.xml
<CustomField>
    <fullName>Dental_CoPay__c</fullName>
    <label>Dental CoPay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>