force-app/main/default/objects/Contact/fields/Dental_Election__c.field-meta.xml
<CustomField>
    <fullName>Dental_Election__c</fullName>
    <label>Dental Election</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subcriber Only</fullName>
            </value>
            <value>
                <fullName>Subscriber + 1</fullName>
            </value>
            <value>
                <fullName>Subscriber + 2</fullName>
            </value>
            <value>
                <fullName>Subscriber + 3</fullName>
            </value>
            <value>
                <fullName>Subscriber + 4</fullName>
            </value>
            <value>
                <fullName>Subscriber + 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>