force-app/main/default/objects/Contact/fields/Dental_Network_Participation__c.field-meta.xml
<CustomField>
    <fullName>Dental_Network_Participation__c</fullName>
    <description>Payer</description>
    <inlineHelpText>Select the networks you are participating in</inlineHelpText>
    <label>Dental Network Participation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>Dental Blue 100</fullName>
            </value>
            <value>
                <fullName>Dental Blue 200</fullName>
            </value>
            <value>
                <fullName>Dental Blue 300</fullName>
            </value>
            <value>
                <fullName>Dental Blue Specialist</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Federal Employee Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>