force-app/main/default/objects/Contact/fields/Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>Dwelling_Type__c</fullName>
    <label>Dwelling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>Semi</fullName>
            </value>
            <value>
                <fullName>Condo/Apt</fullName>
            </value>
            <value>
                <fullName>Town</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>