force-app/main/default/objects/Contact/fields/Election__c.field-meta.xml
<CustomField>
    <fullName>Election__c</fullName>
    <label>Election</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>Subscriber +1</fullName>
            </value>
            <value>
                <fullName>Subscriber +2</fullName>
            </value>
            <value>
                <fullName>Subscriber +3</fullName>
            </value>
            <value>
                <fullName>Subscriber +4</fullName>
            </value>
            <value>
                <fullName>Subscriber +5</fullName>
            </value>
            <value>
                <fullName>Subscriber +6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>