force-app/main/default/objects/Contact/fields/Epic_Sync__c.field-meta.xml
<CustomField>
    <fullName>Epic_Sync__c</fullName>
    <formula>Account.Epic_Sync__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Epic Sync</label>
    <type>DateTime</type>
</CustomField>