force-app/main/default/objects/Contact/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <description>Visual gauge of physician expenses relative to state spending limit</description>
    <formula>IF(State_Expense_Limit__c &gt; 0 &amp;&amp;  Per_State_Rule__r.Active__c = true &amp;&amp; (YTD_Expenses__c &lt; (State_Expense_Limit__c*0.17)),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt8x&quot;,&quot;1-16% of Spend&quot;),  

IF(State_Expense_Limit__c &gt; 0 &amp;&amp; Per_State_Rule__r.Active__c = true &amp;&amp;(YTD_Expenses__c  &gt;=  (State_Expense_Limit__c*0.17) &amp;&amp; YTD_Expenses__c  &lt;  (State_Expense_Limit__c*0.33)),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt8y&quot;,&quot;17-32% of Spend&quot;),  

IF(State_Expense_Limit__c &gt; 0 &amp;&amp; Per_State_Rule__r.Active__c = true &amp;&amp;(YTD_Expenses__c  &gt;=  (State_Expense_Limit__c*0.33) &amp;&amp; YTD_Expenses__c  &lt;  (State_Expense_Limit__c*0.50)),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt8z&quot;,&quot;33-49% of Spend&quot;),  

IF(State_Expense_Limit__c &gt; 0 &amp;&amp; Per_State_Rule__r.Active__c = true &amp;&amp;(YTD_Expenses__c  &gt;=  (State_Expense_Limit__c*0.50) &amp;&amp; YTD_Expenses__c  &lt;  (State_Expense_Limit__c*0.67)),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt90&quot;,&quot;50-66% of Spend&quot;),  

IF(State_Expense_Limit__c &gt; 0 &amp;&amp; Per_State_Rule__r.Active__c = true &amp;&amp;(YTD_Expenses__c   &gt;=   (State_Expense_Limit__c*0.67) &amp;&amp; YTD_Expenses__c  &lt;  (State_Expense_Limit__c*0.83)),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt91&quot;,&quot;67-82% of Spend&quot;),  

IF(State_Expense_Limit__c &gt; 0 &amp;&amp; Per_State_Rule__r.Active__c = true &amp;&amp;(YTD_Expenses__c   &gt;=   (State_Expense_Limit__c*0.83)),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154W00000CMt92&quot;,&quot;83% or MORE of Spend&quot;),  

IF( Per_State_Rule__c = &quot;&quot;, &quot;&quot;, &quot;&quot;) ) ) ) ) ) )</formula>
    <label>Expenses</label>
    <type>Text</type>
</CustomField>