force-app/main/default/objects/Contact/fields/External_Accounts__c.field-meta.xml
<CustomField>
    <fullName>External_Accounts__c</fullName>
    <label>External Accounts</label>
    <summaryForeignKey>External_Account__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>