force-app/main/default/objects/Contact/fields/Facebook_Persona_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Persona_ID__c</fullName>
    <label>Facebook Persona ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>