force-app/main/default/objects/Contact/fields/Family_Support__c.field-meta.xml
<CustomField>
    <fullName>Family_Support__c</fullName>
    <label>Family Support</label>
    <length>100</length>
    <type>Text</type>
</CustomField>