force-app/main/default/objects/Contact/fields/Gendre__c.field-meta.xml
<CustomField>
    <fullName>Gendre__c</fullName>
    <label>Gendre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>