force-app/main/default/objects/Contact/fields/HCCID__c.field-meta.xml
<CustomField>
    <fullName>HCCID__c</fullName>
    <label>HCCID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>