force-app/main/default/objects/Contact/fields/Health_Plans_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Health_Plans_Accepted__c</fullName>
    <label>Health Plans Accepted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Assurant</fullName>
            </value>
            <value>
                <fullName>Blue Cross/Blue Shield</fullName>
            </value>
            <value>
                <fullName>Medicaid/Medicare</fullName>
            </value>
            <value>
                <fullName>Aetna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>